--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-name = compwa_meta
+name = repo-maintenance
 author = Common Partial Wave Analysis
 author_email = compwa-admin@ep1.rub.de
 maintainer_email = compwa-admin@ep1.rub.de
 long_description = file: README.md
 long_description_content_type = text/markdown
 project_urls =
-    Tracker = https://github.com/ComPWA/meta/issues
-    Source = https://github.com/ComPWA/meta
+    Tracker = https://github.com/ComPWA/repo-maintenance/issues
+    Source = https://github.com/ComPWA/repo-maintenance
 license = GPLv3 or later
 classifiers =
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
@@ -32,15 +32,15 @@ package_dir =
 
 [options.entry_points]
 console_scripts =
-    extract-intall-requires = compwa_meta.dev_tools.extract_install_requires:main
-    fix-first-nbcell = compwa_meta.pre_commit_hooks.fix_first_nbcell:main
-    fix-nbformat-version = compwa_meta.pre_commit_hooks.fix_nbformat_version:main
+    extract-intall-requires = repoma.dev_tools.extract_install_requires:main
+    fix-first-nbcell = repoma.pre_commit_hooks.fix_first_nbcell:main
+    fix-nbformat-version = repoma.pre_commit_hooks.fix_nbformat_version:main
 
 [options.packages.find]
 where = src
 
 [options.package_data]
-compwa_meta =
+repoma =
     py.typed
 
 [mypy]
