--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ package_dir =
 
 [options.entry_points]
 console_scripts =
+    check-dev-files = repoma.pre_commit_hooks.check_dev_files:main
     extract-intall-requires = repoma.dev_tools.extract_install_requires:main
     fix-first-nbcell = repoma.pre_commit_hooks.fix_first_nbcell:main
     fix-nbformat-version = repoma.pre_commit_hooks.fix_nbformat_version:main
