--- a/reqs/3.6/requirements.txt
+++ b/reqs/3.6/requirements.txt
@@ -12,6 +12,7 @@ jsonschema==3.2.0
 jupyter-core==4.7.1
 nbformat==5.1.3
 pyrsistent==0.17.3
+pyyaml==5.4.1
 six==1.15.0
 traitlets==4.3.3
 typing-extensions==3.7.4.3
