--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ pyvenv*/
 **.code-workspace
 
 # Exceptions
+!.cspell.json
 !.github/*.yml
 !.github/*/*.yml
 !.gitpod.yml
@@ -48,6 +49,5 @@ pyvenv*/
 !.readthedocs.yml
 !.vscode/*.json
 !codecov.yml
-!cspell.json
 !environment.yml
 !pyrightconfig.json
