ci!: remove dev requirement pinning

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,28 @@ packages = find:
 package_dir =
     =src
 
+[options.extras_require]
+format =
+    black
+    isort
+lint =
+    flake8 >= 3  # for per-file-ignores
+    flake8-blind-except
+    flake8-bugbear
+    flake8-builtins
+    flake8-rst-docstrings
+    mypy
+    pep8-naming
+    pydocstyle
+    pylint
+sty =
+    pre-commit >= 1.4.0
+    %(format)s
+    %(lint)s
+dev =
+    %(sty)s
+    tox >= 1.9  # for skip_install, use_develop
+
 [options.entry_points]
 console_scripts =
     check-dev-files = repoma.pre_commit_hooks.check_dev_files:main
