--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r reqs/3.7/requirements-sty.txt
-          pip install .
+          pip install -e .[sty]
       - name: Perform style checks
         run: pre-commit run -a
