--- a/.github/workflows/requirements-cron.yml
+++ b/.github/workflows/requirements-cron.yml
@@ -8,38 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  upgrade-reqs:
-    name: Upgrade requirement files
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        python-version:
-          - 3.6
-          - 3.7
-          - 3.8
-          - 3.9
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@master
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pip-tools!=6.0.0
-        # https://github.com/jazzband/pip-tools/pull/1353
-      - name: Upgrade dependencies
-        run: bash reqs/upgrade.sh
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ${{ matrix.python-version }}
-          path: reqs/${{ matrix.python-version }}
-
   upgrade-pre-commit:
     name: Upgrade pre-commit hooks
-    needs:
-      - upgrade-reqs
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -50,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r reqs/3.7/requirements-sty.txt
+          pip install pre-commit
       - name: Perform style checks
         run: pre-commit autoupdate
       - uses: actions/upload-artifact@v2
