fix: ignore example .cspell.json

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
           (?x)^(
             .*\.bib|
             .*\.svg|
-            .cspell.json
+            .*\.cspell\.json
           )$
       - id: mixed-line-ending
       - id: name-tests-test
