ci: shorten title of release notes

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,4 @@
-name-template: ComPWA Repo Maintenance $NEXT_PATCH_VERSION
+name-template: Repo Maintenance $NEXT_PATCH_VERSION
 tag-template: $NEXT_PATCH_VERSION
 
 categories:
