--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,7 @@
   "rewrap.wrappingColumn": 79,
   "search.exclude": {
     "**/tests/**/__init__.py": true,
-    "*/tox.ini": true,
+    "*/.pydocstyle": true,
     "reqs/3.*/*.txt": true
   },
   "telemetry.enableCrashReporter": false,
