--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,13 +53,14 @@
   "python.linting.pylintEnabled": true,
   "python.linting.pylintUseMinimalCheckers": false,
   "python.testing.nosetestsEnabled": false,
-  "python.testing.pytestEnabled": false,
+  "python.testing.pytestArgs": ["--color=no"],
+  "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
   "rewrap.wrappingColumn": 79,
   "search.exclude": {
     "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
-    "reqs/3.*/*.txt": true,
+    ".constraints/*.txt": true,
     "src/repoma/.github/**": true
   },
   "telemetry.enableCrashReporter": false,
