--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,9 @@ package_dir =
     =src
 
 [options.extras_require]
+test =
+    pytest
+    pytest-xdist
 format =
     black
     isort
@@ -46,11 +49,13 @@ lint =
     pydocstyle
     pylint
 sty =
-    pre-commit >= 1.4.0
     %(format)s
     %(lint)s
+    %(test)s  # for pytest type hints
+    pre-commit >= 1.4.0
 dev =
     %(sty)s
+    %(test)s
     tox >= 1.9  # for skip_install, use_develop
 
 [options.entry_points]
