feat: check GitHub issue templates

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,5 +66,6 @@ where = src
 [options.package_data]
 repoma =
     .cspell.json
-    .github/pull_request_template.md
+    .github/*
+    .github/ISSUE_TEMPLATE/*
     py.typed
