feat: add setup.cfg formatting hook

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -25,3 +25,9 @@
   language: python
   types:
     - jupyter
+
+- id: format-setup-cfg
+  name: Format setup.cfg
+  entry: format-setup-cfg
+  language: python
+  files: ^setup.cfg$
