--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ format =
     black
     isort
 lint =
-    flake8 >= 3  # for per-file-ignores
+    flake8 >= 3 # for per-file-ignores
     flake8-blind-except
     flake8-bugbear
     flake8-builtins
@@ -51,12 +51,12 @@ lint =
 sty =
     %(format)s
     %(lint)s
-    %(test)s  # for pytest type hints
+    %(test)s # for pytest type hints
     pre-commit >= 1.4.0
 dev =
     %(sty)s
     %(test)s
-    tox >= 1.9  # for skip_install, use_develop
+    tox >= 1.9 # for skip_install, use_develop
 
 [options.entry_points]
 console_scripts =
@@ -64,6 +64,7 @@ console_scripts =
     extract-intall-requires = repoma.dev_tools.extract_install_requires:main
     fix-first-nbcell = repoma.pre_commit_hooks.fix_first_nbcell:main
     fix-nbformat-version = repoma.pre_commit_hooks.fix_nbformat_version:main
+    format-setup-cfg = repoma.pre_commit_hooks.format_setup_cfg:main
 
 [options.packages.find]
 where = src
