test: add pytest coverage support

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,31 @@
 [tox]
 envlist =
+    py,
     sty,
 passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
+
+[testenv]
+description =
+    Run all unit tests
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs}
+
+[testenv:cov]
+description =
+    Compute test coverage
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs:tests} \
+        --cov-fail-under=25 \
+        --cov-report=html \
+        --cov-report=xml \
+        --cov=repoma
 
 [testenv:sty]
 description =
@@ -12,7 +33,6 @@ description =
 setenv =
     SKIP = mypy
 allowlist_externals =
-    bash
     mypy
     pre-commit
 commands =
