--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,6 +1,10 @@
 name-template: Repo Maintenance $NEXT_PATCH_VERSION
 tag-template: $NEXT_PATCH_VERSION
 
+references:
+  - main
+  - epic/*
+
 categories:
   - title: 💡 New features
     label: 💡 Feature
