--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -4,9 +4,13 @@ name: CI-style
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - epic/*
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - epic/*
 
 jobs:
   style:
