--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -4,11 +4,45 @@ name: CI-tests
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - epic/*
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - epic/*
 
 jobs:
+  codecov:
+    name: Unit tests + coverage
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04]
+        python-version: [3.7]
+    steps:
+      - uses: actions/checkout@master
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@master
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[test]
+          pip install .
+      - name: Test with pytest-cov
+        run: pytest tests -n auto --cov=repoma --cov-report=xml
+      - uses: actions/upload-artifact@v2
+        if: ${{ always() }}
+        with:
+          name: test_output_${{ matrix.os }}_${{ matrix.python-version }}
+          path: tests/output
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage.xml
+          flags: unittests
+
   pytest:
     name: Unit tests
     runs-on: ${{ matrix.os }}
