--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,15 +15,18 @@ vscode:
   extensions:
     - bungcip.better-toml
     - christian-kohler.path-intellisense
+    - codestream.codestream
     - davidanson.vscode-markdownlint
     - eamodio.gitlens
     - editorconfig.editorconfig
     - esbenp.prettier-vscode
     - github.vscode-pull-request-github
+    - littlefoxteam.vscode-python-test-adapter
     - ms-python.python
     - ms-python.vscode-pylance
     - ms-vsliveshare.vsliveshare
     - redhat.vscode-yaml
+    - ryanluker.vscode-coverage-gutters
     - stkb.rewrap
     - streetsidesoftware.code-spell-checker
     - travisillig.vscode-json-stable-stringify
