--- a/setup.cfg
+++ b/setup.cfg
@@ -40,24 +40,28 @@ format =
     black
     isort
 lint =
-    flake8 >= 3 # for per-file-ignores
+    flake8
     flake8-blind-except
     flake8-bugbear
     flake8-builtins
+    flake8-comprehensions
+    flake8-pytest-style
     flake8-rst-docstrings
+    flake8-use-fstring
     mypy
     pep8-naming
     pydocstyle
     pylint
+    radon
 sty =
     %(format)s
     %(lint)s
-    %(test)s # for pytest type hints
+    %(test)s  # for pytest type hints
     pre-commit >= 1.4.0
 dev =
     %(sty)s
     %(test)s
-    tox >= 1.9 # for skip_install, use_develop
+    tox >= 1.9  # for skip_install, use_develop
 
 [options.entry_points]
 console_scripts =
