feat: add script to pin constraints files

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ setup_requires =
     setuptools_scm
 install_requires =
     nbformat
+    pip-tools
     PyYAML
 packages = find:
 package_dir =
@@ -66,10 +67,10 @@ dev =
 [options.entry_points]
 console_scripts =
     check-dev-files = repoma.pre_commit_hooks.check_dev_files:main
-    extract-intall-requires = repoma.dev_tools.extract_install_requires:main
     fix-first-nbcell = repoma.pre_commit_hooks.fix_first_nbcell:main
     fix-nbformat-version = repoma.pre_commit_hooks.fix_nbformat_version:main
     format-setup-cfg = repoma.pre_commit_hooks.format_setup_cfg:main
+    pin-requirements = repoma.pre_commit_hooks.check_dev_files:main
 
 [options.packages.find]
 where = src
