feat: enforce auto-close milestone workflow

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,5 +82,6 @@ repoma =
     .github/ISSUE_TEMPLATE/*
     .gitpod.yml
     py.typed
+    workflows/milestone.yml
     workflows/requirements-cron.yml
     workflows/requirements-pr.yml
