--- a/setup.cfg
+++ b/setup.cfg
@@ -82,5 +82,6 @@ repoma =
     .github/ISSUE_TEMPLATE/*
     .gitpod.yml
     py.typed
-    requirements-cron.yml
-    requirements-pr.yml
+    workflows/milestone.yml
+    workflows/requirements-cron.yml
+    workflows/requirements-pr.yml
