feat: add pin-nb-requirements hook
Adds a hook that enforces pip install statements in notebooks so that
they can be run independently.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -31,3 +31,13 @@
   entry: format-setup-cfg
   language: python
   files: ^setup.cfg$
+
+- id: pin-nb-requirements
+  name: Check whether notebook contains a pip install line
+  description: >
+    Specify which packages to install specifically in order to run this
+    notebook.
+  entry: pin-nb-requirements
+  language: python
+  types:
+    - jupyter
