--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,7 @@ console_scripts =
     fix-first-nbcell = repoma.pre_commit_hooks.fix_first_nbcell:main
     fix-nbformat-version = repoma.pre_commit_hooks.fix_nbformat_version:main
     format-setup-cfg = repoma.pre_commit_hooks.format_setup_cfg:main
+    pin-nb-requirements = repoma.pre_commit_hooks.pin_nb_requirements:main
     pin-requirements = repoma.pre_commit_hooks.check_dev_files:main
 
 [options.packages.find]
