--- a/.mypy.ini
+++ b/.mypy.ini
@@ -18,3 +18,5 @@ ignore_errors = True
 ignore_missing_imports = True
 [mypy-setuptools.*]
 ignore_missing_imports = True
+[mypy-yaml.*]
+ignore_missing_imports = True
