ci!: switch to pre-commit.ci where possible (#107)
This should significantly speed up CI, as the style check is currently
the slowest of all and pre-commit.ci is faster than GitHub Actions.

* ci: autoupdate pre-commit hooks
* ci: remove deprecated VSCode extension recommendation
  "littlefoxteam.vscode-python-test-adapter"
* ci: remove language_version from prettier pre-commit hook
* ci: make black, isort, pydocstyle local hooks
* docs: switch to pre-commit.ci badge
* fix: skip pyright hook in tox style job

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,15 @@
+ci:
+  autoupdate_commit_msg: "ci: autoupdate pre-commit hooks"
+  autoupdate_schedule: monthly
+  skip:
+    # local hooks
+    - flake8
+    - mypy
+    - pylint
+    # hooks that don't work on pre-commit.ci
+    - editorconfig-checker
+    - pyright
+
 repos:
   - repo: meta
     hooks:
@@ -28,13 +40,18 @@ repos:
         args: ["--django"]
       - id: trailing-whitespace
 
+  - repo: https://github.com/psf/black
+    rev: 21.9b0
+    hooks:
+      - id: black
+
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.11.0
     hooks:
       - id: blacken-docs
 
   - repo: https://github.com/ComPWA/mirrors-cspell
-    rev: v5.8.2
+    rev: v5.10.1
     hooks:
       - id: cspell
 
@@ -47,19 +64,28 @@ repos:
             .*\.py
           )$
 
+  - repo: https://github.com/pycqa/isort
+    rev: 5.9.3
+    hooks:
+      - id: isort
+
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.28.1
     hooks:
       - id: markdownlint
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.3.2
+    rev: v2.4.1
     hooks:
       - id: prettier
-        language_version: 12.18.2 # prettier does not specify node correctly
+
+  - repo: https://github.com/pycqa/pydocstyle
+    rev: 6.1.1
+    hooks:
+      - id: pydocstyle
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.164
+    rev: v1.1.169
     hooks:
       - id: pyright
 
@@ -68,13 +94,6 @@ repos:
 
   - repo: local
     hooks:
-      - id: black
-        name: black
-        entry: black
-        language: system
-        types:
-          - python
-
       - id: flake8
         name: flake8
         entry: flake8
@@ -82,23 +101,9 @@ repos:
         types:
           - python
 
-      - id: isort
-        name: isort
-        entry: isort
-        language: system
-        types:
-          - python
-
       - id: mypy
         name: mypy
         entry: mypy
-        language: system
-        types:
-          - python
-
-      - id: pydocstyle
-        name: pydocstyle
-        entry: pydocstyle
         language: system
         types:
           - python
