--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ commands =
 description =
     Perform all linting, formatting, and spelling checks
 setenv =
-    SKIP = mypy
+    SKIP = mypy, pyright
 allowlist_externals =
     mypy
     pre-commit
