--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -26,5 +26,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .[sty]
-      - name: Perform style checks
-        run: pre-commit run -a
+      - name: Run non-local pre-commit hooks
+        run: |
+          pre-commit run flake8 -a --color always
+          pre-commit run mypy -a --color always
+          pre-commit run pylint -a --color always
+      - name: Run pre-commit hooks that don't work on pre-commit.ci
+        # cspell:ignore editorconfig
+        run: |
+          pre-commit run editorconfig-checker -a --color always
+          pre-commit run pyright -a --color always
