feat: check configuration files for Prettier

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,6 +82,7 @@ repoma =
     .github/*
     .github/ISSUE_TEMPLATE/*
     .gitpod.yml
+    .prettierrc
     py.typed
     workflows/milestone.yml
     workflows/requirements-cron.yml
