--- a/setup.cfg
+++ b/setup.cfg
@@ -41,15 +41,15 @@ test =
 format =
     black
     isort
-lint =
-    flake8
-    flake8-blind-except
-    flake8-bugbear
-    flake8-builtins
-    flake8-comprehensions
-    flake8-pytest-style
-    flake8-rst-docstrings
-    flake8-use-fstring
+lint =  # provided minimum versions to help PyPI dependency resolver
+    flake8 >=3.9
+    flake8-blind-except >=0.2
+    flake8-bugbear >=21
+    flake8-builtins >=1.5
+    flake8-comprehensions >=3.6
+    flake8-pytest-style >=1
+    flake8-rst-docstrings >=0.2
+    flake8-use-fstring >=1.1
     mypy
     pep8-naming
     pydocstyle
@@ -59,11 +59,11 @@ sty =
     %(format)s
     %(lint)s
     %(test)s  # for pytest type hints
-    pre-commit >= 1.4.0
+    pre-commit >=1.4.0
 dev =
     %(sty)s
     %(test)s
-    tox >= 1.9  # for skip_install, use_develop
+    tox >=1.9  # for skip_install, use_develop
 
 [options.entry_points]
 console_scripts =
