--- a/setup.cfg
+++ b/setup.cfg
@@ -41,15 +41,15 @@ test =
 format =
     black
     isort
-lint =  # provided minimum versions to help PyPI dependency resolver
-    flake8 >=3.9
-    flake8-blind-except >=0.2
-    flake8-bugbear >=21
-    flake8-builtins >=1.5
-    flake8-comprehensions >=3.6
-    flake8-pytest-style >=1
-    flake8-rst-docstrings >=0.2
-    flake8-use-fstring >=1.1
+lint =
+    flake8 <4  # max version helps PyPI dependency resolver, see https://github.com/MichaelKim0407/flake8-use-fstring/pull/11
+    flake8-blind-except
+    flake8-bugbear
+    flake8-builtins
+    flake8-comprehensions
+    flake8-pytest-style
+    flake8-rst-docstrings
+    flake8-use-fstring
     mypy
     pep8-naming
     pydocstyle
