--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ test =
 format =
     black
     isort
-lint =
+flake8 =
     flake8 <4  # max version helps PyPI dependency resolver, see https://github.com/MichaelKim0407/flake8-use-fstring/pull/11
     flake8-blind-except
     flake8-bugbear
@@ -50,8 +50,10 @@ lint =
     flake8-pytest-style
     flake8-rst-docstrings
     flake8-use-fstring
-    mypy
     pep8-naming
+lint =
+    %(flake8)s
+    mypy
     pydocstyle
     pylint
     radon
