--- a/setup.cfg
+++ b/setup.cfg
@@ -52,9 +52,13 @@ flake8 =
     flake8-rst-docstrings
     flake8-use-fstring
     pep8-naming
+mypy =
+    mypy
+    types-PyYAML
+    types-setuptools
 lint =
     %(flake8)s
-    mypy
+    %(mypy)s
     pydocstyle
     pylint
     radon
