ci: include doctests in test coverage

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ description =
 allowlist_externals =
     pytest
 commands =
-    pytest {posargs:tests} \
+    pytest {posargs} \
         --cov-fail-under=25 \
         --cov-report=html \
         --cov-report=xml \
