--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -29,10 +29,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[test]
-          pip install .
+          pip install .[test]
       - name: Test with pytest-cov
-        run: pytest tests -n auto --cov=repoma --cov-report=xml
+        run: pytest -n auto --cov=repoma --cov-report=xml
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
