--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,6 +1,6 @@
 {
   "exclude": [".git", ".tox", "docs/_build"],
-  "include": ["docs/conf.py", "src", "tests"],
+  "include": ["src", "tests"],
   "reportGeneralTypeIssues": false,
   "reportUnboundVariable": false,
   "reportUnusedClass": true,
