--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,7 @@ console_scripts =
     fix-nbformat-version = repoma.pre_commit_hooks.fix_nbformat_version:main
     format-setup-cfg = repoma.pre_commit_hooks.format_setup_cfg:main
     pin-nb-requirements = repoma.pre_commit_hooks.pin_nb_requirements:main
-    pin-requirements = repoma.pre_commit_hooks.check_dev_files:main
+    pin-requirements = repoma.devtools.pin_requirements:main
 
 [options.packages.find]
 where = src
