--- a/setup.cfg
+++ b/setup.cfg
@@ -92,6 +92,7 @@ repoma =
     .gitpod.yml
     .prettierrc
     py.typed
+    workflows/ci-docs.yml
     workflows/milestone.yml
     workflows/requirements-cron.yml
     workflows/requirements-pr.yml
