--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,7 @@ repoma =
     .prettierrc
     py.typed
     workflows/ci-docs.yml
+    workflows/linkcheck.yml
     workflows/milestone.yml
     workflows/requirements-cron.yml
     workflows/requirements-pr.yml
