--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        python-version: [3.7]
+        python-version: ["3.7"]
     steps:
       - uses: actions/checkout@master
       - name: Set up Python ${{ matrix.python-version }}
