--- a/src/repoma/workflows/linkcheck.yml
+++ b/src/repoma/workflows/linkcheck.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -c .constraints/py3.7.txt -e .[doc]
-          sudo apt-get -y install pandoc
+          sudo apt-get -y install graphviz pandoc
       - name: Check external links
         working-directory: docs
         run: make ignore-warnings=1 linkcheck
