--- a/setup.cfg
+++ b/setup.cfg
@@ -43,13 +43,14 @@ format =
     black
     isort
 flake8 =
-    flake8 <4  # max version helps PyPI dependency resolver, see https://github.com/MichaelKim0407/flake8-use-fstring/pull/11
+    flake8 >=4  # extend-select
     flake8-blind-except
     flake8-bugbear
     flake8-builtins
     flake8-comprehensions
     flake8-pytest-style
     flake8-rst-docstrings
+    flake8-type-ignore
     flake8-use-fstring
     pep8-naming
 mypy =
