fix: pin requirements for supported Python only

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     nbformat
     pip-tools
     PyYAML
+    ruamel.yaml  # better YAML dumping
 packages = find:
 package_dir =
     =src
