--- a/.mypy.ini
+++ b/.mypy.ini
@@ -15,5 +15,7 @@ disallow_untyped_defs = False
 ignore_errors = True
 
 ; External packages that miss stubs or type hints
+[mypy-ruamel.*]
+ignore_missing_imports = True
 [mypy-nbformat.*]
 ignore_missing_imports = True
