docs: switch to BSD 3 Clause license
* build: install LICENSE file with pip
* docs: embed LICENSE file

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,12 @@ long_description_content_type = text/markdown
 project_urls =
     Tracker = https://github.com/ComPWA/repo-maintenance/issues
     Source = https://github.com/ComPWA/repo-maintenance
-license = GPLv3 or later
+license = BSD 3-Clause License
+license_files = LICENSE
 classifiers =
-    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python
