ci: check test coverage through tox by default
The tests are fast enough to always compute test coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -9,15 +9,7 @@ skipsdist = True
 
 [testenv]
 description =
-    Run all unit tests
-allowlist_externals =
-    pytest
-commands =
-    pytest {posargs}
-
-[testenv:cov]
-description =
-    Compute test coverage
+    Run all unit tests and check coverage
 allowlist_externals =
     pytest
 commands =
