--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     pip-tools
     PyYAML
     ruamel.yaml  # better YAML dumping
+    toml
 packages = find:
 package_dir =
     =src
@@ -62,6 +63,7 @@ mypy =
     mypy
     types-PyYAML
     types-setuptools
+    types-toml
 lint =
     %(flake8)s
     %(mypy)s
