--- a/src/repoma/workflows/linkcheck.yml
+++ b/src/repoma/workflows/linkcheck.yml
@@ -27,3 +27,5 @@ jobs:
       - name: Check external links
         working-directory: docs
         run: make ignore-warnings=1 linkcheck
+        env:
+          READTHEDOCS_VERSION: ${GITHUB_HEAD_REF}
