--- a/src/repoma/workflows/linkcheck.yml
+++ b/src/repoma/workflows/linkcheck.yml
@@ -26,6 +26,5 @@ jobs:
           sudo apt-get -y install graphviz pandoc
       - name: Check external links
         working-directory: docs
-        run: make ignore-warnings=1 linkcheck
-        env:
-          READTHEDOCS_VERSION: ${GITHUB_HEAD_REF}
+        run:
+          READTHEDOCS_VERSION=$GITHUB_HEAD_REF make ignore-warnings=1 linkcheck
