--- a/setup.cfg
+++ b/setup.cfg
@@ -92,14 +92,6 @@ where = src
 
 [options.package_data]
 repoma =
-    .cspell.json
     .github/*
-    .github/ISSUE_TEMPLATE/*
-    .gitpod.yml
-    .prettierrc
+    .template/*
     py.typed
-    workflows/ci-docs.yml
-    workflows/linkcheck.yml
-    workflows/milestone.yml
-    workflows/requirements-cron.yml
-    workflows/requirements-pr.yml
