--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,7 @@ repos:
       - id: check-case-conflict
       - id: check-json
       - id: check-merge-conflict
+      - id: check-symlinks
       - id: check-toml
       - id: check-vcs-permalinks
       - id: check-yaml
