refactor!: remove devtools module (#33)
* chore: bundle installed template files in .template folder
* ci: add check-symlink hook
* refactor!: merge pre_commit_hooks into repoma
* refactor: remove devtools module
* refactor: turn REPOMA_DIR into Path object

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,26 +81,17 @@ dev =
 
 [options.entry_points]
 console_scripts =
-    check-dev-files = repoma.pre_commit_hooks.check_dev_files:main
-    fix-first-nbcell = repoma.pre_commit_hooks.fix_first_nbcell:main
-    fix-nbformat-version = repoma.pre_commit_hooks.fix_nbformat_version:main
-    format-setup-cfg = repoma.pre_commit_hooks.format_setup_cfg:main
-    pin-nb-requirements = repoma.pre_commit_hooks.pin_nb_requirements:main
-    pin-requirements = repoma.devtools.pin_requirements:main
+    check-dev-files = repoma.check_dev_files:main
+    fix-first-nbcell = repoma.fix_first_nbcell:main
+    fix-nbformat-version = repoma.fix_nbformat_version:main
+    format-setup-cfg = repoma.format_setup_cfg:main
+    pin-nb-requirements = repoma.pin_nb_requirements:main
 
 [options.packages.find]
 where = src
 
 [options.package_data]
 repoma =
-    .cspell.json
     .github/*
-    .github/ISSUE_TEMPLATE/*
-    .gitpod.yml
-    .prettierrc
+    .template/*
     py.typed
-    workflows/ci-docs.yml
-    workflows/linkcheck.yml
-    workflows/milestone.yml
-    workflows/requirements-cron.yml
-    workflows/requirements-pr.yml
