fix: match commit message PR and cron workflow
* ci: ignore .github/ISSUE_TEMPLATES symlink folder only in VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,7 @@
     "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
     ".constraints/*.txt": true,
-    "src/repoma/.github/**": true
+    "src/repoma/.github/ISSUE_TEMPLATE": true
   },
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false
