refactor: load .pre-commit-config with pydantic

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ setup_requires =
 install_requires =
     nbformat
     pip-tools
+    pydantic
     PyYAML
     ruamel.yaml  # better YAML dumping
     toml
