ci: add tox coverage job

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,20 @@ skipsdist = True
 
 [testenv]
 description =
-    Run all unit tests and check coverage
+    Run all unit tests
+allowlist_externals =
+    pytest
+commands =
+    pytest {posargs}
+
+[testenv:cov]
+description =
+    Compute test coverage
 allowlist_externals =
     pytest
 commands =
     pytest {posargs} \
-        --cov-fail-under=35 \
+        --cov-fail-under=40 \
         --cov-report=html \
         --cov-report=xml \
         --cov=repoma
