ci: fix mypy config

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,11 +1,10 @@
 [mypy]
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
+exclude = .*/repoma/__init__\.py
+files = **/*.py
 show_error_codes = True
 warn_unused_configs = True
-files =
-    **/*.py,
-    **/*.pyi,
 
 [mypy-tests.*]
 check_untyped_defs = True
