--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -113,6 +113,7 @@ repos:
         name: mypy
         entry: mypy
         language: system
+        require_serial: true
         types:
           - python
 
