--- a/src/repoma/.github/workflows/requirements-pr.yml
+++ b/src/repoma/.github/workflows/requirements-pr.yml
@@ -26,7 +26,7 @@ jobs:
   pip-constraints:
     name: Update pip constraints files
     needs: diff
-    if: &has-dependency-changes >
+    if: >
       github.event.pull_request.head.repo.full_name == github.repository &&
       needs.diff.outputs.diff != ''
     # Only run if PR does not come from a fork
@@ -44,7 +44,9 @@ jobs:
 
   pre-commit:
     name: pre-commit autoupdate
-    if: *has-dependency-changes
+    if: >
+      github.event.pull_request.head.repo.full_name == github.repository &&
+      needs.diff.outputs.diff != ''
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -52,7 +54,9 @@ jobs:
 
   push:
     name: Push changes
-    if: *has-dependency-changes
+    if: >
+      github.event.pull_request.head.repo.full_name == github.repository &&
+      needs.diff.outputs.diff != ''
     runs-on: ubuntu-20.04
     needs:
       - pip-constraints
