--- a/src/repoma/.github/workflows/requirements-pr.yml
+++ b/src/repoma/.github/workflows/requirements-pr.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   diff:
-    name: Check if there are dependency changes
+    name: Check dependency changes
     if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-20.04
     steps:
