--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -5,20 +5,6 @@
   always_run: true
   pass_filenames: false
 
-- id: fix-first-nbcell
-  name: Check and fix first cells in notebooks
-  description: >
-    Add or replace the first cell in a Jupyter notebook by adding install
-    statements and IPython configurations.
-  entry: fix-first-nbcell
-  exclude: >
-    (?x)^(
-      docs/adr/.*
-    )$
-  language: python
-  types:
-    - jupyter
-
 - id: fix-nbformat-version
   name: Set nbformat minor version to 4 and remove cell IDs
   entry: fix-nbformat-version
@@ -38,6 +24,19 @@
     Specify which packages to install specifically in order to run this
     notebook.
   entry: pin-nb-requirements
+  language: python
+  types:
+    - jupyter
+
+- id: set-nb-cells
+  name: Add or update default cells in a Jupyter notebook
+  description: >
+    Add or replace certain default cells in a Jupyter notebook.
+  entry: set-nb-cells
+  exclude: >
+    (?x)^(
+      docs/adr/.*
+    )$
   language: python
   types:
     - jupyter
