--- a/setup.cfg
+++ b/setup.cfg
@@ -83,10 +83,10 @@ dev =
 [options.entry_points]
 console_scripts =
     check-dev-files = repoma.check_dev_files:main
-    fix-first-nbcell = repoma.fix_first_nbcell:main
     fix-nbformat-version = repoma.fix_nbformat_version:main
     format-setup-cfg = repoma.format_setup_cfg:main
     pin-nb-requirements = repoma.pin_nb_requirements:main
+    set-nb-cells = repoma.set_nb_cells:main
 
 [options.packages.find]
 where = src
