--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -124,5 +124,6 @@ repos:
           - --rcfile=.pylintrc
           - --score=no
         language: system
+        require_serial: true
         types:
           - python
