--- a/src/repoma/.github/workflows/ci-docs.yml
+++ b/src/repoma/.github/workflows/ci-docs.yml
@@ -26,14 +26,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -c .constraints/py3.8.txt .[doc]
+          pip install -c .constraints/py3.8.txt .[doc] tox
           sudo apt-get -y install graphviz pandoc
       - name: Build documentation and run notebooks
-        working-directory: docs
-        env:
-          EXECUTE_NB: YES
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: make html
+        run: tox -e docnb
+        # cspell:ignore docnb
       - name: Print error logs with color
         if: ${{ failure() }}
         # cspell:ignore printf
