--- a/src/repoma/.github/workflows/linkcheck.yml
+++ b/src/repoma/.github/workflows/linkcheck.yml
@@ -24,15 +24,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -c .constraints/py3.8.txt -e .[doc]
+          pip install -c .constraints/py3.8.txt -e .[doc] tox
           sudo apt-get -y install graphviz pandoc
       - name: Check external links
-        working-directory: docs
-        env:
-          REPO: ${{ github.event.pull_request.head.repo.full_name }}
         run: |
           BRANCH=main
           if [[ "$GITHUB_HEAD_REF" != "" ]]; then
             BRANCH=$GITHUB_HEAD_REF
           fi
-          READTHEDOCS_VERSION=$BRANCH make ignore-warnings=1 linkcheck
+          READTHEDOCS_VERSION=$BRANCH tox -e linkcheck
