style: set Prettier width to 88 as well

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -20,9 +20,8 @@
 
 - id: pin-nb-requirements
   name: Check whether notebook contains a pip install line
-  description: >
-    Specify which packages to install specifically in order to run this
-    notebook.
+  description:
+    Specify which packages to install specifically in order to run this notebook.
   entry: pin-nb-requirements
   language: python
   types:
