--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ lint =
     %(flake8)s
     %(mypy)s
     pydocstyle
-    pylint
+    pylint >=2.5  # good-names-rgxs
     radon
 sty =
     %(format)s
