DX: switch from 💡 to ✨
Looks better as a GitHub label

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -7,7 +7,7 @@ references:
 
 categories:
   - title: ✨ New features
-    label: ✨ Feature
+    label: 💡 Feature
   - title: ⚠️ Enhancements and optimizations
     label: ⚙️ Enhancement
   - title: ⚠️ API changes
