--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -23,16 +23,14 @@ jobs:
         python-version: ["3.7"]
     steps:
       - uses: actions/checkout@master
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install .[test]
-      - name: Test with pytest-cov
-        run: pytest -n auto --cov=repoma --cov-report=xml
+      - run: pytest -n auto --cov=repoma --cov-report=xml
       - uses: actions/upload-artifact@v3
         if: ${{ always() }}
         with:
@@ -70,16 +68,14 @@ jobs:
             python-version: "3.7"
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .[test]
-      - name: Test with pytest
-        run: pytest -n auto
+      - run: pytest -n auto
       - uses: actions/upload-artifact@v3
         if: ${{ always() }}
         with:
