--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -1,5 +1,3 @@
-# cspell:ignore unittests
-
 name: CI-style
 
 on:
@@ -21,18 +19,33 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
+          cache: pip
+          cache-dependency-path: |
+            .constraints/py3.*.txt
+            setup.cfg
           python-version: "3.8"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .[sty]
+      - name: Retrieve pre-commit cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pre-commit/
+          key: |
+            pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
+      - name: Retrieve mypy cache
+        uses: actions/cache@v3
+        with:
+          path: .mypy_cache/
+          key: |
+            mypy-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg') }}
       - name: Run non-local pre-commit hooks
         run: |
           pre-commit run flake8 -a --color always
           pre-commit run mypy -a --color always
           pre-commit run pylint -a --color always
       - name: Run pre-commit hooks that don't work on pre-commit.ci
-        # cspell:ignore editorconfig
         run: |
           pre-commit run editorconfig-checker -a --color always
           pre-commit run pyright -a --color always
