--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -25,6 +25,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
+          cache: pip
+          cache-dependency-path: |
+            .constraints/py3.*.txt
+            setup.cfg
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
@@ -70,6 +74,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
+          cache: pip
+          cache-dependency-path: |
+            .constraints/py3.*.txt
+            setup.cfg
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
