--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -13,9 +13,13 @@ jobs:
       LABELS_TOKEN: "${{ secrets.LABELS_TOKEN }}"
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.7
+          cache: pip
+          cache-dependency-path: |
+            .constraints/py3.*.txt
+            setup.cfg
+          python-version: "3.7"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
