--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -1,17 +1,17 @@
-# cspell:ignore unittests
-
-name: CI-tests
+name: pytest
 
 on:
   push:
     branches:
       - main
       - epic/*
-      - test
+      - "[0-9]+.[0-9]+.x"
   pull_request:
     branches:
       - main
       - epic/*
+      - "[0-9]+.[0-9]+.x"
+  workflow_dispatch:
 
 jobs:
   codecov:
@@ -23,12 +23,15 @@ jobs:
         python-version: ["3.7"]
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          key: |
+            ${{ github.workflow }}-${{ github.job }}-${{ matrix.os }}-py${{ matrix.python-version }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg') }}
+          path: |
+            .pytest_cache
+            ~/.cache/pip/
       - uses: actions/setup-python@v4
         with:
-          cache: pip
-          cache-dependency-path: |
-            .constraints/py3.*.txt
-            setup.cfg
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
@@ -49,9 +52,9 @@ jobs:
     name: Unit tests
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os:
-          - macos-10.15
           - ubuntu-20.04
         python-version:
           - "3.6"
@@ -60,24 +63,22 @@ jobs:
           - "3.9"
           - "3.10"
         exclude:
-          - os: macos-10.15
-            python-version: "3.6"
-          - os: macos-10.15
-            python-version: "3.8"
-          - os: macos-10.15
-            python-version: "3.9"
-          - os: macos-10.15
-            python-version: "3.10"
           - os: ubuntu-20.04 # coverage job
+            python-version: "3.7"
+        include:
+          - os: macos-11
             python-version: "3.7"
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          key: |
+            ${{ github.workflow }}-${{ github.job }}-${{ matrix.os }}-py${{ matrix.python-version }}-${{ hashFiles('.constraints/py3.*.txt', 'setup.cfg') }}
+          path: |
+            .pytest_cache
+            ~/.cache/pip/
       - uses: actions/setup-python@v4
         with:
-          cache: pip
-          cache-dependency-path: |
-            .constraints/py3.*.txt
-            setup.cfg
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
