DX: activate new Python extensions for VSCode
* DX: activate and configure VSCode flake8 extension
* DX: activate and configure VSCode isort extension
* DX: activate and configure VSCode pylint extension
* DX: activate strict type checking
* DX: extend pyright file exclusions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,9 @@
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "github.vscode-pull-request-github",
+    "ms-python.flake8",
+    "ms-python.isort",
+    "ms-python.pylint",
     "ms-python.python",
     "ms-python.vscode-pylance",
     "ms-vsliveshare.vsliveshare",
