--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -21,6 +21,9 @@ vscode:
     - editorconfig.editorconfig
     - esbenp.prettier-vscode
     - github.vscode-pull-request-github
+    - ms-python.flake8
+    - ms-python.isort
+    - ms-python.pylint
     - ms-python.python
     - ms-python.vscode-pylance
     - ms-vsliveshare.vsliveshare
