--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,10 +1,32 @@
 {
-  "exclude": [".git", ".tox", "docs/_build"],
-  "include": ["src", "tests"],
+  "exclude": [
+    "**/__pycache__",
+    "**/_build",
+    "**/.git",
+    "**/.ipynb_checkpoints",
+    "**/.mypy_cache",
+    "**/.pytest_cache",
+    "**/.tox"
+  ],
   "reportGeneralTypeIssues": false,
+  "reportIncompatibleMethodOverride": false,
+  "reportMissingParameterType": false,
+  "reportMissingTypeArgument": false,
+  "reportMissingTypeStubs": false,
+  "reportOverlappingOverload": false,
+  "reportPrivateImportUsage": false,
+  "reportPrivateUsage": false,
   "reportUnboundVariable": false,
+  "reportUnknownArgumentType": false,
+  "reportUnknownMemberType": false,
+  "reportUnknownParameterType": false,
+  "reportUnknownVariableType": false,
+  "reportUnnecessaryComparison": false,
+  "reportUnnecessaryContains": false,
+  "reportUnnecessaryIsInstance": false,
   "reportUnusedClass": true,
   "reportUnusedFunction": true,
   "reportUnusedImport": true,
-  "reportUnusedVariable": true
+  "reportUnusedVariable": true,
+  "typeCheckingMode": "strict"
 }
