--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,14 @@ repos:
         args: ["--django"]
       - id: trailing-whitespace
 
+  - repo: https://github.com/ComPWA/repo-maintenance
+    rev: 0.0.155
+    hooks:
+      - id: check-dev-files
+        args:
+          - --allow-labels
+      - id: format-setup-cfg
+
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
@@ -45,14 +53,6 @@ repos:
     hooks:
       - id: blacken-docs
 
-  - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.155
-    hooks:
-      - id: check-dev-files
-        args:
-          - --allow-labels
-      - id: format-setup-cfg
-
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v6.14.0
     hooks:
@@ -62,10 +62,20 @@ repos:
     rev: 2.6.1
     hooks:
       - id: editorconfig-checker
+        name: editorconfig
         exclude: >
           (?x)^(
             .*\.py
           )$
+
+  - repo: local
+    hooks:
+      - id: flake8
+        name: flake8
+        entry: flake8
+        language: system
+        types:
+          - python
 
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
@@ -77,6 +87,16 @@ repos:
     hooks:
       - id: markdownlint
 
+  - repo: local
+    hooks:
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: system
+        require_serial: true
+        types:
+          - python
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.4
     hooks:
@@ -86,6 +106,19 @@ repos:
     rev: 6.1.1
     hooks:
       - id: pydocstyle
+
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint
+        args:
+          - --rcfile=.pylintrc
+          - --score=no
+        language: system
+        require_serial: true
+        types:
+          - python
 
   - repo: https://github.com/ComPWA/mirrors-pyright
     rev: v1.1.279
@@ -98,34 +131,3 @@ repos:
       - id: pyupgrade
         args:
           - --py36-plus
-
-  # The following tools have to be install locally, because they can also be
-  # used by code editors (e.g. linting and format-on-save).
-
-  - repo: local
-    hooks:
-      - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types:
-          - python
-
-      - id: mypy
-        name: mypy
-        entry: mypy
-        language: system
-        require_serial: true
-        types:
-          - python
-
-      - id: pylint
-        name: pylint
-        entry: pylint
-        args:
-          - --rcfile=.pylintrc
-          - --score=no
-        language: system
-        require_serial: true
-        types:
-          - python
