DX: run `repo-maintenance` hooks locally
* DX: block any `from __future__ import annotations` statements

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,12 @@ ci:
   autoupdate_schedule: monthly
   skip:
     # local hooks
+    - check-dev-files
     - flake8
+    - format-setup-cfg
     - mypy
     - pylint
+    - repoma-self-check
     # hooks that don't work on pre-commit.ci
     - editorconfig-checker
     - pyright
@@ -35,13 +38,28 @@ repos:
         args: ["--django"]
       - id: trailing-whitespace
 
-  - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.155
+  - repo: local
     hooks:
       - id: check-dev-files
+        name: Check developer config files in the repository
+        entry: check-dev-files
+        language: python
+        always_run: true
+        pass_filenames: false
         args:
           - --allow-labels
+
       - id: format-setup-cfg
+        name: Format setup.cfg
+        entry: format-setup-cfg
+        language: python
+        files: ^setup.cfg$
+
+      - id: repoma-self-check
+        name: repoma-self-check
+        entry: repoma-self-check
+        language: python
+        files: ^\.pre\-commit\-(config|hooks)\.yaml$
 
   - repo: https://github.com/psf/black
     rev: 22.10.0
@@ -54,7 +72,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v6.14.0
+    rev: v6.14.1
     hooks:
       - id: cspell
 
@@ -121,12 +139,12 @@ repos:
           - python
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.279
+    rev: v1.1.280
     hooks:
       - id: pyright
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.2.1
+    rev: v3.2.2
     hooks:
       - id: pyupgrade
         args:
