--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,7 @@ console_scripts =
     fix-nbformat-version = repoma.fix_nbformat_version:main
     format-setup-cfg = repoma.format_setup_cfg:main
     pin-nb-requirements = repoma.pin_nb_requirements:main
+    repoma-self-check = repoma.self_check:main
     set-nb-cells = repoma.set_nb_cells:main
 
 [options.packages.find]
