--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -36,9 +36,12 @@ jobs:
           pip install -e .[sty]
       - name: Run non-local pre-commit hooks
         run: |
+          pre-commit run check-dev-files -a --color always
           pre-commit run flake8 -a --color always
+          pre-commit run format-setup-cfg -a --color always
           pre-commit run mypy -a --color always
           pre-commit run pylint -a --color always
+          pre-commit run repoma-self-check -a --color always
       - name: Run pre-commit hooks that don't work on pre-commit.ci
         run: |
           pre-commit run editorconfig-checker -a --color always
