MAINT: ignore pyright `reportUntypedFunctionDecorator`

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -24,6 +24,7 @@
   "reportUnnecessaryComparison": false,
   "reportUnnecessaryContains": false,
   "reportUnnecessaryIsInstance": false,
+  "reportUntypedFunctionDecorator": false,
   "reportUnusedClass": true,
   "reportUnusedFunction": true,
   "reportUnusedImport": true,
