--- a/.pylintrc
+++ b/.pylintrc
@@ -4,23 +4,24 @@
 
 [BASIC]
 good-names-rgxs=
-    ^[a-z]\d*$,  # e.g. x, y, m1, m2 (physics symbols)
+  ^[a-z]\d*$,  # e.g. x, y, m1, m2 (physics symbols)
 
 [MASTER]
 ignore-patterns=
-    .*\.pyi
+  .*\.pyi
 
 [MESSAGES CONTROL]
 disable=
-    duplicate-code, # https://github.com/PyCQA/pylint/issues/214
-    logging-fstring-interpolation,
-    missing-class-docstring,    # pydocstyle
-    missing-function-docstring, # pydocstyle
-    missing-module-docstring,   # pydocstyle
-    redefined-builtin, # flake8-built
-    too-few-public-methods, # data containers (attrs) and interface classes
-    unspecified-encoding, # http://pylint.pycqa.org/en/latest/whatsnew/2.10.html
-    unused-import, # https://www.flake8rules.com/rules/F401
+  duplicate-code, # https://github.com/PyCQA/pylint/issues/214
+  logging-fstring-interpolation,
+  missing-class-docstring,    # pydocstyle
+  missing-function-docstring, # pydocstyle
+  missing-module-docstring,   # pydocstyle
+  no-member,  # mypy and pyright
+  redefined-builtin, # flake8-built
+  too-few-public-methods, # data containers (attrs) and interface classes
+  unspecified-encoding, # http://pylint.pycqa.org/en/latest/whatsnew/2.10.html
+  unused-import, # https://www.flake8rules.com/rules/F401
 
 [SIMILARITIES]
 ignore-imports=yes # https://stackoverflow.com/a/30007053
