--- a/setup.cfg
+++ b/setup.cfg
@@ -30,9 +30,9 @@ python_requires = >=3.6
 setup_requires =
     setuptools_scm
 install_requires =
+    attrs >=20.1.0  # https://www.attrs.org/en/stable/changelog.html#id82
     nbformat
     pip-tools
-    pydantic
     PyYAML
     ruamel.yaml  # better YAML dumping
     toml
