--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,6 +61,11 @@ repos:
         language: python
         files: ^\.pre\-commit\-(config|hooks)\.yaml$
 
+  - repo: https://github.com/PyCQA/autoflake
+    rev: v1.7.7
+    hooks:
+      - id: autoflake
+
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
