FEAT: auto-update release drafter
WARNING: it is now required to provide the argument `--repo-name` to the
`check-dev-files` hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,6 +48,8 @@ repos:
         pass_filenames: false
         args:
           - --allow-labels
+          - --repo-name=repo-maintenance
+          - --repo-title='ComPWA Repository Maintenance'
 
       - id: format-setup-cfg
         name: Format setup.cfg
