--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,7 +64,12 @@
     "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
     ".constraints/*.txt": true,
-    "src/repoma/.github/ISSUE_TEMPLATE": true
+    "src/repoma/.github/ISSUE_TEMPLATE": true,
+    "src/repoma/.github/workflows/release-drafter.yml": true,
+    "src/repoma/.template/.cspell.json": true,
+    "src/repoma/.template/.gitpod.yml": true,
+    "src/repoma/.template/.prettierrc": true,
+    "src/repoma/.template/commitlint.config.js": true
   },
   "telemetry.telemetryLevel": "off"
 }
