--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -31,5 +31,7 @@ replacers:
 
 sort-direction: ascending
 
-template: |-
+template: |
   $CHANGES
+
+  _The full changelog as commits can be found [here](https://github.com/ComPWA/ampform/compare/$PREVIOUS_TAG...$NEXT_PATCH_VERSION)._
