FEAT: enforce new `requirements.yml` workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,5 +71,10 @@
     "src/repoma/.template/.prettierrc": true,
     "src/repoma/.template/commitlint.config.js": true
   },
-  "telemetry.telemetryLevel": "off"
+  "telemetry.telemetryLevel": "off",
+  "yaml.schemas": {
+    "https://json.schemastore.org/github-workflow.json": [
+      ".github/workflows/update-dependencies.yml"
+    ]
+  }
 }
