DX: outsource CD workflow to ComPWA/actions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,6 +47,7 @@ repos:
         pass_filenames: false
         args:
           - --allow-labels
+          - --no-pypi
           - --repo-name=repo-maintenance
           - --repo-title=ComPWA Repository Maintenance
 
