--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,7 +64,12 @@
     "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
     ".constraints/*.txt": true,
+    ".github/cd.yml": true,
+    ".github/ci.yml": true,
     "src/repoma/.github/ISSUE_TEMPLATE": true,
+    "src/repoma/.github/pull_request_template.md": true,
+    "src/repoma/.github/workflows/clean-cache.yml": true,
+    "src/repoma/.github/workflows/pr-linting.yml": true,
     "src/repoma/.github/workflows/release-drafter.yml": true,
     "src/repoma/.template/.cspell.json": true,
     "src/repoma/.template/.gitpod.yml": true,
