--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,8 +64,8 @@
     "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
     ".constraints/*.txt": true,
-    ".github/cd.yml": true,
-    ".github/ci.yml": true,
+    ".github/workflows/cd.yml": true,
+    ".github/workflows/ci.yml": true,
     "src/repoma/.github/ISSUE_TEMPLATE": true,
     "src/repoma/.github/pull_request_template.md": true,
     "src/repoma/.github/workflows/clean-cache.yml": true,
