--- a/src/repoma/.github/workflows/ci.yml
+++ b/src/repoma/.github/workflows/ci.yml
@@ -35,4 +35,5 @@ jobs:
       macos-python-version: "3.7"
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
   style:
+    if: inputs.specific-pip-packages == ''
     uses: ComPWA/actions/.github/workflows/pre-commit.yml@dev
